Figured out how to evenly space the contents of an ItemListing. Trying to fix spacing for the labels now.

--- a/pantry-revised/src/styles/ItemListing.css
+++ b/pantry-revised/src/styles/ItemListing.css
@@ -1,19 +1,24 @@
 .itemContainer {
-    display: flex;
-    justify-content: start;
-    align-items: flex;
     position: relative;
-    background: #FFF3CA;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     margin: 0rem -24rem;
-    padding: 1rem;
+    padding: 1.2rem;
     border-radius: 15px;
     margin-bottom: 1rem;
+    background: #FFF3CA;
     box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
-    top: 0rem;
     
 }
 
-.itemContainer > p {
+.itemContainer > div {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 10rem;
+    min-width: 10rem;
     color: black;
-    margin-right: 12rem;
+    font-size: 1rem;
+    background-color: cyan;
 }
